rename FlagContainer.java to RegionFlags.java; add comments to IFlagContainer; rework RegionFlags to use composition instead of inheritance